--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.0.6",
     "@nestjs/swagger": "^5.0.9",
+    "@nestjs/websockets": "^8.0.6",
     "class-validator": "^0.13.1",
     "helmet": "^4.6.0",
     "mongoose": "^5.13.8",
