--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@nestjs/platform-socket.io": "^8.0.6",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/websockets": "^8.0.6",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "csurf": "^1.11.0",
     "helmet": "^4.6.0",
     "mongoose": "^5.13.8",
     "passport": "^0.4.1",
