feat: Add email connection and validation account commands

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+#
+ENVIRONMENT=DEVELOPMENT
+CERT_FILE=/path/to/cert_file
+PRIVATE_KEY_FILE=/path/to/privkey_file
+
 #DATABASE CREDENTIALS
 MONGO_DB_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
 
@@ -5,3 +10,10 @@ MONGO_DB_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[de
 SECRET=MYSECRETSTRING
 CRYPTOIV=CRYPTOIV
 CRYPTOKEY=CRYPTOKEY
+ITERATIONS=10
+KEYLEN=512
+DIGEST=sha512
+#EMAIL
+EMAIL_SERVICE=SERVICENAME.EJ. gmail
+EMAIL_USER=YOUR EMAIL
+EMAIL_PASSWORD=YOUR EMAIL PASSWORD
