feat: Add monitoring related functionalities and update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 #
-ENVIRONMENT=DEVELOPMENT
+ENVIRONMENT=PRODUCTION
 CERT_FILE=/path/to/cert_file
 PRIVATE_KEY_FILE=/path/to/privkey_file
 
@@ -13,7 +13,12 @@ CRYPTOKEY=CRYPTOKEY
 ITERATIONS=10
 KEYLEN=512
 DIGEST=sha512
+
 #EMAIL
 EMAIL_SERVICE=SERVICENAME.EJ. gmail
 EMAIL_USER=YOUR EMAIL
 EMAIL_PASSWORD=YOUR EMAIL PASSWORD
+JWT_VERIFICATION_TOKEN_SECRET=7AnEd5epXmdaJfUrokkQ
+JWT_VERIFICATION_TOKEN_EXPIRATION_TIME=600
+EMAIL_CONFIRMATION_URL=<frontend-base url>/verify-email/
+EMAIL_FORGOT_PASSWORD_URL=<frontend-base url>/reset-password/
